--- a/portfolio.html
+++ b/portfolio.html
@@ -16,74 +16,77 @@
   </head>
   <body>
     <!--HEADER-->
-    <header class="header">
-      <nav class="navigation">
-        <a
-          class="header-logo-second link"
-          lang="en"
-          href="./index.html"
-          aria-label=" WebStudio "
-        >
-          <span class="header-logo"> Web</span>Studio
-        </a>
-        <ul class="navigayion-list list">
-          <li>
-            <a class="navigation-list-link link" href="./index.html">
-              Студия
-            </a>
-          </li>
-          <li>
-            <a class="navigation-list-link link" href="./portfolio.html">
-              Портфолио
-            </a>
-          </li>
-          <li><a class="navigation-list-link link" href=""> Контакты </a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li>
-          <a class="header-tel-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+    <header class="header header-border-portfolio">
+      <div class="header-flex-conteiner conteiner">
+        <nav class="header-navigation">
+          <a
+            class="header-logo-second link"
+            lang="en"
+            href="./index.html"
+            aria-label=" WebStudio "
           >
-        </li>
-        <li>
-          <a class="header-tel-link link" href="tel:+380961111111">
-            +38 096 111 11 11
+            <span class="header-logo"> Web</span>Studio
           </a>
-        </li>
-      </ul>
+          <ul class="navigation-list list">
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./index.html">
+                Студия
+              </a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./portfolio.html">
+                Портфолио
+              </a>
+            </li class="navigation-list-item">
+            <li><a class="navigation-list-link link" href=""> Контакты </a></li>
+          </ul>
+        </nav>
+        <ul class="contact-list" >
+          <li class="navigation-list-item">
+            <a class="header-tel-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-tel-link link" href="tel:+380961111111">
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
+      </div>
     </header>
     <!--MAIN-->
     <main>
-      <section>
-        <ul class="list">
-          <li><button class="button-portfolio" type="button">Все</button></li>
-          <li>
+      <section class="main-menu">
+        <div class="main-section-list">
+        <ul class="button-list-menu  list">
+          <li class="bottom-styles"><button class="button-portfolio" type="button">Все</button></li>
+          <li class="bottom-styles">
             <button class="button-portfolio" type="button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="bottom-styles">
             <button class="button-portfolio" type="button">Приложения</button>
           </li>
-          <li>
+          <li class="bottom-styles">
             <button class="button-portfolio" type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="bottom-styles">
             <button class="button-portfolio" type="button">Маркетинг</button>
           </li>
         </ul>
-
-        <ul class="list">
-          <li>
+        
+        <ul class="project-net  list">
+          <li class="project-img-style" >
             <img src="./images/portfolio/veb.jpg" alt="Технокряк" />
             <h2 class="portfolio-title-list">Технокряк</h2>
             <p class="portfolio-category-list">Веб-сайт</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img src="./images/portfolio/poster.jpg" alt="постер new orlean" />
             <h2 class="portfolio-title-list">Веб-сайт</h2>
             <p class="portfolio-category-list">Дизайн</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img
               src="./images/portfolio/restaurant.jpg"
               alt="логотип ресторана"
@@ -91,17 +94,17 @@
             <h2 class="portfolio-title-list">Ресторан Seafood</h2>
             <p class="portfolio-category-list">Приложение</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img src="./images/portfolio/project4.jpg" alt="фото навушников" />
             <h2 class="portfolio-title-list">Проект Prime</h2>
             <p class="portfolio-category-list">Маркетинг</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img src="./images/portfolio/projectboxes.jpg" alt="Проект Boxes" />
             <h2 class="portfolio-title-list">Проект Boxes</h2>
             <p class="portfolio-category-list">Приложение</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img
               src="./images/portfolio/imspiration6.jpg"
               alt="веб-сайт на мониторе"
@@ -109,7 +112,7 @@
             <h2 class="portfolio-title-list">Inspiration has no Borders</h2>
             <p class="portfolio-category-list">Веб-сайт</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img
               src="./images/portfolio/limited7.jpg"
               alt="лимитованое издание"
@@ -117,12 +120,12 @@
             <h2 class="portfolio-title-list">Издание Limited Edition</h2>
             <p class="portfolio-category-list">Дизайн</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img src="./images/portfolio/projectlab8.jpg" alt="проект lab" />
             <h2 class="portfolio-title-list">Проект LAB</h2>
             <p class="portfolio-category-list">Маркетинг</p>
           </li>
-          <li>
+          <li class="project-img-style" >
             <img
               src="./images/portfolio/grow9.jpg"
               alt=" приложение для бизнеса"
@@ -131,10 +134,12 @@
             <p class="portfolio-category-list">Приложение</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!--footer-->
     <footer class="footer">
+      <div class="footer-container">
       <a
         class="footer-logo link"
         lang="en"
@@ -144,8 +149,8 @@
         <span class="header-logo link"> Web</span>Studio
       </a>
       <address>
-        <ul class="list">
-          <li>
+        <ul class="address-list-style list">
+          <li class="contact-link-style">
             <a
               class="address link"
               href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
@@ -153,18 +158,19 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
+          <li class="contact-link-style">
             <a class="footer-tel-link link" href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
-          <li>
+          <li class="contact-link-style">
             <a class="footer-tel-link link" href="tel:+380991111111">
               +38 099 111 11 11
             </a>
           </li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
