--- a/index.html
+++ b/index.html
@@ -61,17 +61,19 @@
     <main>
       <!--main background -->
       <section class="hero-banner">
-        <div class="conteiner-hero">
-          <h1 class="hero-title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
-          <button class="button" type="button">Заказать услугу</button>
+        <div class="conteiner">
+          <div class="conteiner-hero">
+            <h1 class="hero-title">
+              Эффективные решения <br />
+              для вашего бизнеса
+            </h1>
+            <button class="button" type="button">Заказать услугу</button>
+          </div>
         </div>
       </section>
       <!--features section-->
       <section>
-        <div class="conteiner-feactures">
+        <div class="conteiner padding-top">
           <ul class="flex-list list">
             <li class="feactures-list-style">
               <h3 class="feactures-title">Внимание к деталям</h3>
@@ -111,7 +113,7 @@
       </section>
       <!--what we do section-->
       <section>
-        <div class="what-we-do-style-list">
+        <div class="conteiner padding-bottom">
           <h2 class="what-we-do-our-team">Чем мы занимаемся</h2>
           <ul class="list what-do-pictures">
             <li class="img-styles">
@@ -143,7 +145,7 @@
       </section>
       <!--our team section-->
       <section class="our-team-style">
-        <div class="our-team">
+        <div class="conteiner padding-bottom">
           <h2 class="what-we-do-our-team">Наша команда</h2>
           <ul class="our-team-img list">
             <li class="our-team-img-list">
@@ -192,7 +194,7 @@
     </main>
     <!--footer section-->
     <footer class="footer">
-      <div class="footer-container">
+      <div class="conteiner footer-container">
         <a
           class="footer-logo link"
           lang="en"
