--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <!--MAIN-->
     <main>
       <section class="main-menu">
-        <div class="main-section-list">
+        <div class="conteiner">
           <ul class="button-list-menu list">
             <li class="bottom-styles">
               <button class="button-portfolio" type="button">Все</button>
@@ -150,7 +150,7 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <div class="footer-container">
+      <div class="conteiner footer-container">
         <a
           class="footer-logo link"
           lang="en"
